--- a/03_maquette_one-million/assets/css/style.css
+++ b/03_maquette_one-million/assets/css/style.css
@@ -1,13 +1,59 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 * {
     box-sizing: border-box;
 }
 
 :root {
-    font-size: 62.5%;
+    /* font-size: 62.5%; */
 }
 
 #section1 {
     background-image: url(../images/hero-image.jpg);
+    
 }
 
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+.container {
+    width: 100%;
+}
+
+/* style pour les logos de la section 3 */
+main section:nth-child(3) i {
+    cursor: pointer;
+    font-size: 3rem;
+    background-color: #474747;
+    color: #fff;
+    border-radius: 50%;
+    padding: 1.2rem;
+    
+}
+
+/* style pour les boutons de la section 3 */
+main section div button {
+    border-radius: 5px;
+    color: #E74C3C;
+    background-color: #fff;
+    border: solid 1px gray;
+    padding: .5rem;
+}
+
+/* couleur du h1 de la section 1 */
+h1 {
+    color: #fff;
+}
+
+/* couleur du text de la section 1 */
+main #section1 div p {
+    color: #fff;
+}
+
+
+/* main #section1 div:nth-child(2) p. span {
+    font-weight: bold;
+} */
+
+/* bordure sous le logo de l'académy */
+main #section2 div img {
+    border-bottom: #E74C3C solid 1px;
+    padding-bottom: 1rem;
+}
